Push about timeline fix.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -493,6 +493,14 @@
     --theme-col-txt-button-tertiary: @text !important;
     --theme-col-txt-button-tertiary-disabled: @overlay0 !important;
 
+    --theme-bg-about-posts: @mantle !important;
+    --theme-button-about-arrow-bg: @surface0 !important;
+    --theme-button-about-arrow-bg--hover: @surface2 !important;
+    --theme-button-about-arrow-bg--disabled: @mantle !important;
+    --theme-button-about-timeline-bg: @surface0 !important;
+    --theme-button-about-timeline-bg--hover: @surface1 !important;
+    --theme-button-about-timeline-bg--active: @accent !important;
+
     --theme-card-dismiss-bg:  !important;
     --theme-card-dismiss-bg--hover:  !important;
 
@@ -748,7 +756,13 @@
       }
     }
 
-    a {
+    a:not(
+      .cta-cards_button__1dD9t,
+      .download-cta-section_setAsDefaultButton__x1tIX,
+      .button_button__GGtY1,
+      .button_primary__bqhFV,
+      .button_size-xl__6ZhE1
+    ) {
       color: @blue;
 
       &:hover {
