feat(17track): a lot of theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -42,15 +42,15 @@
 		--background: @base;
 		/* --foreground: 240 10% 4%;
 		--card: 0 0% 100%;
-		--card-foreground: 240 10% 4%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 0 0% 3.9%;
-		--primary: 238 100% 36%;
+		--card-foreground: 240 10% 4%; */
+		--popover: #lib.hslify(@base) [] !important;
+		--popover-foreground: @text !important;
+		/* --primary: 238 100% 36%;
 		--primary-foreground: 0 0% 98%;
 		--secondary: 0 0% 96.1%;
-		--secondary-foreground: 0 0% 9%;
-		--muted: 0 0% 96.1%;
-		--muted-foreground: 0 0% 45.1%;
+		--secondary-foreground: 0 0% 9%; */
+		--muted: #lib.hslify(@surface0) [] !important;
+		/* --muted-foreground: 0 0% 45.1%;
 		--accent: 0 0% 96.1%;
 		--accent-foreground: 0 0% 9%;
 		--destructive: 0 84.2% 60.2%;
@@ -99,9 +99,9 @@
 		--yq-blue-8: rgba(4, 0, 107, 1);
 		--yq-blue-9: rgba(5, 0, 69, 1);
 		--yq-blue-10: rgba(3, 0, 31, 1);
-		--yq-zinc-50: rgba(255, 255, 255, 1);
-		--yq-zinc-100: rgba(244, 244, 245, 1);
-		--yq-zinc-200: rgba(228, 228, 231, 1);
+		--yq-zinc-50: rgba(255, 255, 255, 1); */
+		--yq-zinc-100: @mantle !important;
+		/* --yq-zinc-200: rgba(228, 228, 231, 1);
 		--yq-zinc-300: rgba(212, 212, 216, 1);
 		--yq-zinc-400: rgba(161, 161, 170, 1);
 		--yq-zinc-500: rgba(113, 113, 122, 1);
@@ -150,20 +150,32 @@
 		  border-color: @surface0 !important;
 		}
 
-		body, .text-white, .text-text-primary, .text-foreground {
+		body {
 		  background-color: @base !important;
 		  color: @text !important;
+		}
+
+		.bg-\[linear-gradient\(180deg\,\#EFF6FF\,\#ffffff\)\], .focus\:bg-accent {
+			background: @base !important;
 		}
 
 		[style="background: rgb(23, 23, 23);"], [data-sidebar="footer"] {
 		  background-color: @crust !important;
 		}
 
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover {
+      background-color: @mantle !important;
+		}
+
+		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button {
+		  color: @text !important;
+		}
+
 		.text-zinc-950 {
 		  color: @base !important;
 		}
 
-		.text-text-secondary, .text-muted-foreground {
+		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover {
 		  color: @subtext1 !important;
 		}
 
@@ -176,22 +188,28 @@
 		}
 
 		.bg-orange-50 {
-			background-color: @flamingo !important;
+			background-color: @yellow !important;
 		}
 
 		.bg-red-50 {
-			background-color: @rosewater !important;
+			background-color: @red !important;
 		}
 
 		.bg-primary {
 			background-color: @blue !important;
+			color: @base !important;
+		}
+
+		.bg-primary:hover {
+			background-color: @sapphire !important;
+			color: @base !important;
 		}
 
 		a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
 			fill: @base !important;
 		}
 
-		svg path[fill="white"] {
+		svg path[fill="white"], svg path[fill="black"], svg path[fill="#131B35"], svg path[fill="#292E47"] {
 			fill: @text;
 		}
 
@@ -223,9 +241,25 @@
 			fill: @subtext1 !important;
 		}
 
+		svg path[fill="#E6E6E6"] {
+		  fill: @surface0 !important;
+		}
+
+		svg path[fill="#DBDBDB"] {
+		  fill: @base !important;
+		}
+
 		img[src*="17track-full-logo.svg"] {
 		  @svg: escape('<svg viewBox="0 0 296 48" xmlns="http://www.w3.org/2000/svg"><path d="M11.92 12H0L5.55 0h18.29v48H11.92zm43.7-12H27.81v12h22.26L33.39 48h11.92L67.54 0z" fill="@{peach}"/><g fill="@{text}"><path d="M155 16.86c0-4.87-1.47-8.68-4.35-11.5C147.31 2 142.13 0 134.63 0h-18.42a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V34.43h7.49a36 36 0 0 0 4.57-.28L142.77 47a1.39 1.39 0 0 0 1.23 1h10a.72.72 0 0 0 .73-1l-4.83-17.25c.24-.22.48-.44.71-.68 2.87-2.82 4.35-6.63 4.35-11.5v-.56zm-27.74 7.21V12h8.46c4.51 0 7.28 2 7.28 5.72v.68c0 3.49-2.66 5.68-7.29 5.68zM204.35 47 191.6 1a1.39 1.39 0 0 0-1.26-1h-17.13a1.39 1.39 0 0 0-1.26 1l-12.76 46a.72.72 0 0 0 .73 1h9.93a1.39 1.39 0 0 0 1.26-1l1.95-7h17.42l1.95 7a1.39 1.39 0 0 0 1.26 1h9.93a.72.72 0 0 0 .73-1m-28-19 5.12-18.51c.15-.53.39-.53.53 0L187.16 28zM110.26 0H74.72l-5.55 12h16.25v35a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V12h12.91a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1m171.01 48H296l-17.33-24L296 0h-14.78l-15 20.81V1a1 1 0 0 0-1-1h-9.93a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1v-5.74l5.1-7.07zm-228.8 0h11.1V24.04zM236.4 0h-17.88c-6.91 0-11.92 3.78-11.92 9v30c0 5.21 5 9 11.92 9h17.88c6.91 0 11.92-3.79 11.92-9V29a1 1 0 0 0-1-1h-9.92a1 1 0 0 0-1 1v7h-15.89a2 2 0 0 1-2-2V14a2 2 0 0 1 2-2h15.89v7.1a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V9c-.01-5.22-5.02-9-11.93-9"/><path d="M234.42 36h2v-2a2 2 0 0 1-2 2m1.98-24h-2a2 2 0 0 1 2 2z"/></g></svg>');
 			content: url("data:image/svg+xml,@{svg}");
 		}
+
+		#paint0_radial_985_7129 stop:first-child {
+      stop-color: @base;
+    }
+
+    #paint1_linear_985_7129 stop:first-child {
+      stop-color: @subtext0;
+    }
   }
 }
