feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -155,7 +155,7 @@
 		  color: @text !important;
 		}
 
-		.bg-\[linear-gradient\(180deg\,\#EFF6FF\,\#ffffff\)\], .focus\:bg-accent {
+		.bg-\[linear-gradient\(180deg\,\#EFF6FF\,\#ffffff\)\], .focus\:bg-accent, .bg-white {
 			background: @base !important;
 		}
 
@@ -163,7 +163,7 @@
 		  background-color: @crust !important;
 		}
 
-		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover {
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover {
       background-color: @mantle !important;
 		}
 
@@ -205,7 +205,7 @@
 			color: @base !important;
 		}
 
-		a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
+		a svg path[fill="white"], a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
 			fill: @base !important;
 		}
 
