Add dual modals.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -320,6 +320,9 @@
       // box-shadow is done with --searchbox-radio-inset-shadow!
     }
 
+    --theme-body-text-color: @text !important;
+    --theme-table-border-line: @overlay0 !important;
+
     --theme-assist-bg-chat-system: @mantle !important;
     --theme-assist-gradient-stop: @mantle !important;
     --theme-atb-button-bg: @blue !important;
@@ -1090,6 +1093,32 @@
           180deg,
           darken(@mauve, 0.05%),
           darken(@mauve, 50.05%)
+        ) !important;
+      }
+    }
+
+    .dual-column-feature-card_root__C5JfV {
+      &.dual-column-feature-card_paleBlue__XKpyb {
+        --scfc-bg: linear-gradient(
+          180deg,
+          darken(@sky, 0.05%),
+          darken(@sky, 50.05%)
+        ) !important;
+      }
+
+      &.dual-column-feature-card_yellow__bFyZ_ {
+        background-color: linear-gradient(
+          180deg,
+          darken(@yellow, 0.05%),
+          darken(@yellow, 50.05%)
+        ) !important;
+      }
+
+      &.dual-column-feature-card_palePurple__QJduH {
+        background-color: linear-gradient(
+          180deg,
+          darken(@lavender, 0.05%),
+          darken(@lavender, 50.05%)
         ) !important;
       }
     }
