Fix everything, including formatting.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/substack/catppuccin.user.less
+++ b/styles/substack/catppuccin.user.less
@@ -199,7 +199,7 @@
     }
 
     .aboutHero-lZByAF {
-      background: url(/img/about_page/hero-background-mobile.png) 50%/cover
+      background: url("/img/about_page/hero-background-mobile.png") 50%/cover
         no-repeat !important;
 
       div > div > h1, div > div > div {
@@ -335,7 +335,7 @@
     }
 
     .priority_secondary-outline-MgyjoK {
-      outline: @overlay0 !important;
+      outline-color: @overlay0 !important;
     }
 
     .lt-btn--default,
