--- a/styles/substack/catppuccin.user.less
+++ b/styles/substack/catppuccin.user.less
@@ -198,13 +198,8 @@
       color: @subtext0 !important;
     }
 
-    .aboutHero-lZByAF {
-      background: url("/img/about_page/hero-background-mobile.png") 50%/cover
-        no-repeat !important;
-
-      div > div > h1, div > div > div {
-        color: @base !important;
-      }
+    .aboutHero-lZByAF div > div > :is(h1, div) {
+      color: @base !important;
     }
 
     .lt-search-box--small {
