feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -40,9 +40,9 @@
 		#lib.defaults();
 
 		--background: @base;
-		/* --foreground: 240 10% 4%;
-		--card: 0 0% 100%;
-		--card-foreground: 240 10% 4%; */
+		/* --foreground: 240 10% 4%; */
+		--card: @base !important;
+		--card-foreground: @text !important;
 		--popover: #lib.hslify(@base) [] !important;
 		--popover-foreground: @text !important;
 		/* --primary: 238 100% 36%;
@@ -167,7 +167,7 @@
       background-color: @mantle !important;
 		}
 
-		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button {
+		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button, .text-zinc-900 {
 		  color: @text !important;
 		}
 
@@ -179,7 +179,7 @@
 		  color: @subtext1 !important;
 		}
 
-		.text-text-link, .text-primary {
+		.text-text-link, .text-primary, .text-\[--yq-blue-6\] {
 		  color: @blue !important;
 		}
 
