--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -1,11 +1,11 @@
 /* ==UserStyle==
-@name 17track Catppuccin
+@name 17TRACK Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/17track
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/17track
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/17track/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3A17track
-@description Soothing pastel theme for 17track
+@description Soothing pastel theme for 17TRACK
 @author Catppuccin
 @license MIT
 
