Add some fixes for press. Working on some other stuff too.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -92,8 +92,8 @@
     --color-gray80: @text !important; // top nav link hovered
     --color-gray90: @text !important; // text
     --color-gray100: @sky !important; // hovered links
-    --color-black-at-6: @crust !important;
-    --color-gray-border: @overlay0 !important;
+    --color-black-at-6: @crust !important; // sidebar selected tab bg
+    --color-gray-border: @overlay0 !important; // sidebar border
 
     --ddg-browser-address-toolbar-icon:  !important;
     --ddg-browser-color-page-bg:  !important;
@@ -349,6 +349,7 @@
       #bc4726
     );
     --theme-bg-home: @base !important;
+    --theme-bg-press-materials: @accent !important;
     --theme-bg-home-bottom: @mantle !important;
     --theme-bg-home-dialog-install-overlay: fade(@accent, 30%) !important;
     --theme-bg-home-error:  !important;
@@ -765,7 +766,14 @@
       .button_button__GGtY1,
       .button_primary__bqhFV,
       .button_size-xl__6ZhE1
-    ) {
+    ),
+    a:not(
+      .cta-cards_button__1dD9t,
+      .download-cta-section_setAsDefaultButton__x1tIX,
+      .button_button__GGtY1,
+      .button_primary__bqhFV,
+      .button_size-xl__6ZhE1
+    ):link {
       color: @blue;
 
       &:hover {
@@ -783,12 +791,6 @@
 
     body, content, content p {
       color: @text !important;
-    }
-
-    .newsletter_hero__j3WeG
-      .newsletter_illustration__UNcxq
-      .newsletter_city__3vJSi {
-      filter: @accent-filter !important;
     }
 
     .newsletter_testimonials__lmZAW
