feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -93,9 +93,9 @@
 		--yq-blue-2: rgba(150, 164, 235, 1);
 		--yq-blue-3: rgba(106, 122, 222, 1);
 		--yq-blue-4: rgba(67, 81, 209, 1);
-		--yq-blue-5: rgba(31, 42, 196, 1);
-		--yq-blue-6: rgba(0, 7, 183, 1);
-		--yq-blue-7: rgba(0, 0, 145, 1);
+		--yq-blue-5: rgba(31, 42, 196, 1); */
+		--yq-blue-6: @blue !important;
+		/* --yq-blue-7: rgba(0, 0, 145, 1);
 		--yq-blue-8: rgba(4, 0, 107, 1);
 		--yq-blue-9: rgba(5, 0, 69, 1);
 		--yq-blue-10: rgba(3, 0, 31, 1);
@@ -146,7 +146,7 @@
 		--yq-basic-white: rgba(255, 255, 255, 1);
 		--yq-basic-black: rgba(0, 0, 0, 1); */
 
-		* {
+		*, ::after, ::before {
 		  border-color: @surface0 !important;
 		}
 
@@ -163,11 +163,11 @@
 		  background-color: @crust !important;
 		}
 
-		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover {
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\] {
       background-color: @mantle !important;
 		}
 
-		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button, .text-zinc-900 {
+		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button, .text-zinc-900, .text-\[\#09090B\] {
 		  color: @text !important;
 		}
 
@@ -250,7 +250,12 @@
 		}
 
 		img[src*="17track-full-logo.svg"] {
-		  @svg: escape('<svg viewBox="0 0 296 48" xmlns="http://www.w3.org/2000/svg"><path d="M11.92 12H0L5.55 0h18.29v48H11.92zm43.7-12H27.81v12h22.26L33.39 48h11.92L67.54 0z" fill="@{peach}"/><g fill="@{text}"><path d="M155 16.86c0-4.87-1.47-8.68-4.35-11.5C147.31 2 142.13 0 134.63 0h-18.42a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V34.43h7.49a36 36 0 0 0 4.57-.28L142.77 47a1.39 1.39 0 0 0 1.23 1h10a.72.72 0 0 0 .73-1l-4.83-17.25c.24-.22.48-.44.71-.68 2.87-2.82 4.35-6.63 4.35-11.5v-.56zm-27.74 7.21V12h8.46c4.51 0 7.28 2 7.28 5.72v.68c0 3.49-2.66 5.68-7.29 5.68zM204.35 47 191.6 1a1.39 1.39 0 0 0-1.26-1h-17.13a1.39 1.39 0 0 0-1.26 1l-12.76 46a.72.72 0 0 0 .73 1h9.93a1.39 1.39 0 0 0 1.26-1l1.95-7h17.42l1.95 7a1.39 1.39 0 0 0 1.26 1h9.93a.72.72 0 0 0 .73-1m-28-19 5.12-18.51c.15-.53.39-.53.53 0L187.16 28zM110.26 0H74.72l-5.55 12h16.25v35a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V12h12.91a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1m171.01 48H296l-17.33-24L296 0h-14.78l-15 20.81V1a1 1 0 0 0-1-1h-9.93a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1v-5.74l5.1-7.07zm-228.8 0h11.1V24.04zM236.4 0h-17.88c-6.91 0-11.92 3.78-11.92 9v30c0 5.21 5 9 11.92 9h17.88c6.91 0 11.92-3.79 11.92-9V29a1 1 0 0 0-1-1h-9.92a1 1 0 0 0-1 1v7h-15.89a2 2 0 0 1-2-2V14a2 2 0 0 1 2-2h15.89v7.1a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V9c-.01-5.22-5.02-9-11.93-9"/><path d="M234.42 36h2v-2a2 2 0 0 1-2 2m1.98-24h-2a2 2 0 0 1 2 2z"/></g></svg>');
+			@svg: escape('<svg viewBox="0 0 296 48" xmlns="http://www.w3.org/2000/svg"><path d="M11.92 12H0L5.55 0h18.29v48H11.92zm43.7-12H27.81v12h22.26L33.39 48h11.92L67.54 0z" fill="@{peach}"/><g fill="@{text}"><path d="M155 16.86c0-4.87-1.47-8.68-4.35-11.5C147.31 2 142.13 0 134.63 0h-18.42a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V34.43h7.49a36 36 0 0 0 4.57-.28L142.77 47a1.39 1.39 0 0 0 1.23 1h10a.72.72 0 0 0 .73-1l-4.83-17.25c.24-.22.48-.44.71-.68 2.87-2.82 4.35-6.63 4.35-11.5v-.56zm-27.74 7.21V12h8.46c4.51 0 7.28 2 7.28 5.72v.68c0 3.49-2.66 5.68-7.29 5.68zM204.35 47 191.6 1a1.39 1.39 0 0 0-1.26-1h-17.13a1.39 1.39 0 0 0-1.26 1l-12.76 46a.72.72 0 0 0 .73 1h9.93a1.39 1.39 0 0 0 1.26-1l1.95-7h17.42l1.95 7a1.39 1.39 0 0 0 1.26 1h9.93a.72.72 0 0 0 .73-1m-28-19 5.12-18.51c.15-.53.39-.53.53 0L187.16 28zM110.26 0H74.72l-5.55 12h16.25v35a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V12h12.91a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1m171.01 48H296l-17.33-24L296 0h-14.78l-15 20.81V1a1 1 0 0 0-1-1h-9.93a1 1 0 0 0-1 1v46a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1v-5.74l5.1-7.07zm-228.8 0h11.1V24.04zM236.4 0h-17.88c-6.91 0-11.92 3.78-11.92 9v30c0 5.21 5 9 11.92 9h17.88c6.91 0 11.92-3.79 11.92-9V29a1 1 0 0 0-1-1h-9.92a1 1 0 0 0-1 1v7h-15.89a2 2 0 0 1-2-2V14a2 2 0 0 1 2-2h15.89v7.1a1 1 0 0 0 1 1h9.93a1 1 0 0 0 1-1V9c-.01-5.22-5.02-9-11.93-9"/><path d="M234.42 36h2v-2a2 2 0 0 1-2 2m1.98-24h-2a2 2 0 0 1 2 2z"/></g></svg>');
+			content: url("data:image/svg+xml,@{svg}");
+		}
+
+		img[src*="earth-icon.svg"] {
+			@svg: escape('<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.516 6.136h1.211a2.045 2.045 0 0 1 2.046 2.046v.682a.68.68 0 0 0 .681.681A2.045 2.045 0 0 1 7.5 11.591v2.045q.705-.001 1.364-.152V10.91a2.045 2.045 0 0 1 2.045-2.045h2.575a6.15 6.15 0 0 0-.197-3.41h-1.696a.686.686 0 0 0-.682.682 2.045 2.045 0 1 1-4.09 0 .68.68 0 0 0-.683-.681 2.727 2.727 0 0 1-2.72-2.535 6.13 6.13 0 0 0-1.9 3.216m3.257-4.134v.725a1.364 1.364 0 0 0 1.363 1.364 2.045 2.045 0 0 1 2.046 2.045.682.682 0 1 0 1.364 0 2.05 2.05 0 0 1 2.045-2.045h1.012A6.13 6.13 0 0 0 7.5 1.364c-.98 0-1.906.23-2.727.638m9.586 2.459A7.501 7.501 0 0 0 0 7.5a7.5 7.5 0 1 0 14.394-2.96l-.035-.08m-1.36 5.766h-2.09a.68.68 0 0 0-.682.682V13a6.16 6.16 0 0 0 2.771-2.772m-6.863 3.257A6.14 6.14 0 0 1 1.364 7.5h1.363a.68.68 0 0 1 .682.682v.682a2.045 2.045 0 0 0 2.045 2.045.68.68 0 0 1 .682.682z" fill="color(display-p3 0.0353 0.0353 0.0431)" fill-opacity="1"/></svg>');
 			content: url("data:image/svg+xml,@{svg}");
 		}
 
